added quality settings

--- a/Flow.xcodeproj/xcshareddata/xcschemes/Flow.xcscheme
+++ b/Flow.xcodeproj/xcshareddata/xcschemes/Flow.xcscheme
@@ -73,6 +73,12 @@
             ReferencedContainer = "container:Flow.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-t"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
